--- a/sass/variables/_z-index.scss
+++ b/sass/variables/_z-index.scss
@@ -1,7 +1,3 @@
-$z-index-bg: -5;
-$z-index-bg-link: -1;
-$z-index-content: 0;
-$z-index-tooltip: 50;
-$z-index-menu: 100;
+$z-index-overlay: 90;
+$z-index-popin: 100;
 $z-index-topbar: 110;
-$z-index-popin: 120;
